--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header class="header">
     <nav class="nav">
-        <div class="logo">Mi Nombre</div>
+        <div class="logo">Camila De Giusti</div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -22,7 +22,7 @@
 
 <section id="home" class="home-section">
     <h1>Hola, soy <span class="name-highlight">Tu Nombre</span></h1>
-    <p>Desarrollador/a Web | Frontend | Fullstack</p>
+    <p>Estudiante avanzada Lic. en Ciencias de la Computación</p>
 </section>
 
 <section id="about" class="about-section">
@@ -55,7 +55,7 @@
 </section>
 
 <footer class="footer">
-    <p>© 2026 Tu Nombre</p>
+    <p>© 2026 De Giusti Camila</p>
 </footer>
 
 <script src="script.js"></script>
