--- a/index.html
+++ b/index.html
@@ -12,22 +12,31 @@
     <nav class="nav">
         <div class="logo">Camila De Giusti</div>
         <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#about">Acerca de mí</a></li>
+            <li><a href="#projects">Proyectos</a></li>
+            <li><a href="#contact">Contacto</a></li>
         </ul>
     </nav>
 </header>
 
 <section id="home" class="home-section">
-    <h1>Hola, soy <span class="name-highlight">Tu Nombre</span></h1>
-    <p>Estudiante avanzada Lic. en Ciencias de la Computación</p>
+    <h1>Hola! Soy <span class="name-highlight">Camila De Giusti</span></h1>
+    <p class="subtitle">Estudiante avanzada de Licenciatura en Ciencias de la Computación</p>
+    <p class="description">
+        Bienvenido a mi portafolio personal. Aquí encontrarás información sobre mis proyectos y habilidades.
 </section>
 
 <section id="about" class="about-section">
     <h2>Sobre mí</h2>
-    <p>Aquí puedes escribir quién eres, qué haces y tus habilidades.</p>
+    <p>Soy estudiante avanzada de Licenciatura en Ciencias de la Computación.
+        Interesada en desarrollo de software, infraestructura de TI y administración de sistemas.
+        Me apasiona aprender y enfrentar nuevos desafíos en el campo de la computación.
+    </p>
+    <p>
+        He trabajado en varios proyectos académicos y personales que me han permitido desarrollar mis habilidades técnicas y de trabajo en equipo.
+        Algunos de ellos están disponibles en mi portafolio.
+    </p>
 </section>
 
 <section id="projects" class="projects-section">
@@ -48,14 +57,14 @@
     <h2>Contacto</h2>
     <form>
         <input type="text" placeholder="Nombre" required />
-        <input type="email" placeholder="Correo" required />
+        <input type="email" placeholder="Correo electrónico" required />
         <textarea placeholder="Mensaje" required></textarea>
         <button type="submit">Enviar</button>
     </form>
 </section>
 
 <footer class="footer">
-    <p>© 2026 De Giusti Camila</p>
+    <p>De Giusti Camila</p>
 </footer>
 
 <script src="script.js"></script>
