--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="#home">Inicio</a></li>
             <li><a href="#about">Acerca de mí</a></li>
             <li><a href="#projects">Proyectos</a></li>
+            <li><a href="#certificates">Certificados</a></li>
             <li><a href="#contact">Contacto</a></li>
         </ul>
     </nav>
@@ -51,6 +52,14 @@
             <p>Descripción corta del proyecto.</p>
         </div>
     </div>
+</section>
+
+<section id="certificates" class="certificates-section">
+    <h2>Certificados</h2>
+    <ul class="certificate-list">
+        <li>Certificado 1 - Descripción breve</li>
+        <li>Certificado 2 - Descripción breve</li>
+    </ul>
 </section>
 
 <section id="contact" class="contact-section">
