titulo a los cursos

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </section>
 
 <section id="certificates" class="certificates-section">
-    <h2>Certificados</h2>
+    <h2>Certificados - Cursos realizados</h2>
     <ul class="certificate-list">
         <li>Certificado 1 - Descripción breve</li>
         <li>Certificado 2 - Descripción breve</li>
