--- a/index.html
+++ b/index.html
@@ -44,9 +44,20 @@
     <h2>Proyectos</h2>
     <div class="project-grid">
         <div class="project-card">
-            <h3>Proyecto 1</h3>
-            <p>Descripción corta del proyecto.</p>
-        </div>
+            <h3>Juego estilo Mario Bros</h3>
+            <p>Juego desarrollado para la materia Tecnología de Programación.
+                Lenguaje utilizado: Java.
+                Patrones de diseño: Singleton, Factory Method, Observer, Visitor.
+            </p>
+            <div class="carrusel-contenedor">
+                <div class="carrusel">
+                    <img src="Fotos proyectos/MarioBros/1.png" alt="Captura de pantalla del juego Mario Bros 1" />
+                    <img src="Fotos proyectos/MarioBros/2.png" alt="Captura de pantalla del juego Mario Bros 2" />
+                    <img src="Fotos proyectos/MarioBros/3.png" alt="Captura de pantalla del juego Mario Bros 3" />
+                </div>
+                <button class="carrusel-btn left-btn">&#10094;</button>
+                <button class="carrusel-btn right-btn">&#10095;</button>
+            </div>
         <div class="project-card">
             <h3>Proyecto 2</h3>
             <p>Descripción corta del proyecto.</p>
@@ -57,19 +68,20 @@
 <section id="certificates" class="certificates-section">
     <h2>Certificados - Cursos realizados</h2>
     <ul class="certificate-list">
-        <li>Certificado 1 - Descripción breve</li>
-        <li>Certificado 2 - Descripción breve</li>
+        <li>Hardware & Operating Systems - Descripción breve</li>
+        <li>Introduction to Containers, Kubernetes & OpenShift - Descripción breve</li>
+        <li>Introduction to Linux Commands & Shell Scripting - Descripción breve</li>
     </ul>
 </section>
 
 <section id="contact" class="contact-section">
     <h2>Contacto</h2>
-    <form>
-        <input type="text" placeholder="Nombre" required />
-        <input type="email" placeholder="Correo electrónico" required />
-        <textarea placeholder="Mensaje" required></textarea>
-        <button type="submit">Enviar</button>
-    </form>
+    <p>Puedes contactarme a través de los siguientes medios:</p>
+    <ul class="contact-list">
+        <li>Email: degiusticamila@gmail.com</li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/camila-de-giusti/" target="_blank">Camila De Giusti</a></li>
+        <li>GitHub: <a href="https://github.com/degiusticamila" target="_blank">camila-de-giusti</a></li>
+    </ul>
 </section>
 
 <footer class="footer">
