--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
     <div class="project-grid">
         <div class="project-card">
             <h3>Juego estilo Mario Bros</h3>
-            <p>Juego desarrollado para la materia Tecnología de Programación.
-                Lenguaje utilizado: Java.
-                Patrones de diseño: Singleton, Factory Method, Observer, Visitor.
-            </p>
+            <p>Juego desarrollado para la materia Tecnología de Programación.</p>
+            <p>Lenguaje utilizado: Java.</p>
+            <p>Patrones de diseño: Singleton, Factory Method, Observer, Visitor.</p>
             <div class="carrusel-contenedor">
                 <div class="carrusel">
                     <img src="Fotos proyectos/MarioBros/1.png" alt="Captura de pantalla del juego Mario Bros 1" />
@@ -85,6 +84,6 @@
     <p>De Giusti Camila</p>
 </footer>
 
-<script src="script.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
