--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
     <div class="project-grid">
         <div class="project-card">
             <h3>Juego estilo Mario Bros</h3>
-            <p>Juego desarrollado para la materia Tecnología de Programación.</p>
             <p>Lenguaje utilizado: Java.</p>
             <p>Patrones de diseño: Singleton, Factory Method, Observer, Visitor.</p>
             <div class="carrusel-contenedor">
@@ -57,6 +56,12 @@
                 <button class="carrusel-btn left-btn">&#10094;</button>
                 <button class="carrusel-btn right-btn">&#10095;</button>
             </div>
+        </div>
+        <div class="project-card">
+            <h3>Compilador para Minijava</h3>
+            <p>Lenguaje utilizado: Java.</p>
+            <p>Repositorio del proyecto: <a href="https://github.com/degiusticamila/Compilador-Minijava" target="_blank">GitHub</a></p>
+
         </div>
     </div>
 </section>
