--- a/index.html
+++ b/index.html
@@ -63,8 +63,15 @@
             <p>Repositorio del proyecto: <a href="https://github.com/degiusticamila/Compilador-Minijava" target="_blank">GitHub</a></p>
 
         </div>
+        <div class="project-card">
+            <h3>Refactoring para TV Series Info</h3>
+            <p>Lenguaje utilizado: Java.</p>
+            <p>Repositorio del proyecto: <a href="https://github.com/degiusticamila/ProyectoDyDS" target="_blank">GitHub</a></p>
+
+        </div>
     </div>
 </section>
+
 
 <section id="certificates" class="certificates-section">
     <h2>Certificados - Cursos realizados</h2>
