--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="project-card">
             <h3>Juego estilo Mario Bros</h3>
             <p>Lenguaje utilizado: Java.</p>
-            <p>Patrones de diseño: Singleton, Factory Method, Observer, Visitor.</p>
+            <p>Repositorio del proyecto: <a href="https://github.com/degiusticamila/tdp-proyecto-final" target="_blank">GitHub</a></p>
             <div class="carrusel-contenedor">
                 <div class="carrusel">
                     <img src="Fotos proyectos/MarioBros/1.png" alt="Captura de pantalla del juego Mario Bros 1" />
@@ -61,6 +61,15 @@
             <h3>Compilador para Minijava</h3>
             <p>Lenguaje utilizado: Java.</p>
             <p>Repositorio del proyecto: <a href="https://github.com/degiusticamila/Compilador-Minijava" target="_blank">GitHub</a></p>
+
+        </div>
+         <div class="project-card">
+            <h3>Procesamiento de archivos txt con FileChooser</h3>
+            <p>Lenguaje utilizado: Java.</p>
+            <p>Repositorio del proyecto: <a href="https://github.com/degiusticamila/got" target="_blank">GitHub</a></p>
+            <div>
+                <img src="Fotos proyectos/got/winter-is-coming.png" alt="Winter is Coming">
+            </div>
 
         </div>
         <div class="project-card">
