Proyecto winter is coming

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h3>Procesamiento de archivos txt con FileChooser</h3>
             <p>Lenguaje utilizado: Java.</p>
             <p>Repositorio del proyecto: <a href="https://github.com/degiusticamila/got" target="_blank">GitHub</a></p>
-            <div>
+            <div class="carrusel-contenedor">
                 <img src="Fotos proyectos/got/winter-is-coming.png" alt="Winter is Coming">
             </div>
 
