--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
             <p>Lenguaje utilizado: Java.</p>
             <p>Repositorio del proyecto: <a href="https://github.com/degiusticamila/got" target="_blank">GitHub</a></p>
             <div class="carrusel-contenedor">
-                <img src="Fotos proyectos/got/winter-is-coming.png" alt="Winter is Coming">
+                <div class="carrusel">
+                    <img src="Fotos proyectos/got/winter-is-coming.png" alt="Winter is Coming">
             </div>
 
         </div>
