--- a/index.html
+++ b/index.html
@@ -85,12 +85,28 @@
 
 
 <section id="certificates" class="certificates-section">
-    <h2>Certificados - Cursos realizados</h2>
-    <ul class="certificate-list">
-        <li>Hardware & Operating Systems - Descripción breve</li>
-        <li>Introduction to Containers, Kubernetes & OpenShift - Descripción breve</li>
-        <li>Introduction to Linux Commands & Shell Scripting - Descripción breve</li>
-    </ul>
+    <h2>Certificados</h2>
+    <div class="certificates-grid">
+        <div class="certificate-card">
+            <img src="Certificados/hardware certificado.pdf" alt="Hardware & Operating Systems" />
+            <p class="certificate-title">Hardware & Operating Systems</p>
+        </div>
+
+        <div class="certificate-card">
+            <img src="Certificados/containers certificado.pdf" alt="Containers, Kubernetes & OpenShift" />
+            <p class="certificate-title">
+                Introduction to Containers, Kubernetes & OpenShift
+            </p>
+        </div>
+
+        <div class="certificate-card">
+            <img src="Certificados/linux certificado.pdf" alt="Linux Commands & Shell Scripting" />
+            <p class="certificate-title">
+                Introduction to Linux Commands & Shell Scripting
+            </p>
+        </div>
+
+    </div>
 </section>
 
 <section id="contact" class="contact-section">
