--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
     <h2>Certificados</h2>
     <div class="certificates-grid">
         <div class="certificate-card">
-            <img src="Certificados/hardware certificado.pdf" alt="Hardware & Operating Systems" />
+            <img src="Certificados/hardware certificado.png" alt="Hardware & Operating Systems" />
             <p class="certificate-title">Hardware & Operating Systems</p>
         </div>
 
         <div class="certificate-card">
-            <img src="Certificados/containers certificado.pdf" alt="Containers, Kubernetes & OpenShift" />
+            <img src="Certificados/containers certificado.png" alt="Containers, Kubernetes & OpenShift" />
             <p class="certificate-title">
                 Introduction to Containers, Kubernetes & OpenShift
             </p>
         </div>
 
         <div class="certificate-card">
-            <img src="Certificados/linux certificado.pdf" alt="Linux Commands & Shell Scripting" />
+            <img src="Certificados/linux certificado.png" alt="Linux Commands & Shell Scripting" />
             <p class="certificate-title">
                 Introduction to Linux Commands & Shell Scripting
             </p>
