--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 
 <header class="header">
     <nav class="nav">
-        <div class="logo">Camila De Giusti</div>
+        <div class="logo"><img src="Fotos perfil/camila-de-giusti.png" alt="Camila De Giusti"></div>
         <ul class="nav-links">
             <li><a href="#home">Inicio</a></li>
             <li><a href="#about">Acerca de mí</a></li>
+            <li><a href="#technologies">Tecnologías</a></li>
             <li><a href="#projects">Proyectos</a></li>
             <li><a href="#certificates">Certificados</a></li>
             <li><a href="#contact">Contacto</a></li>
@@ -23,7 +24,7 @@
 
 <section id="home" class="home-section">
     <h1>Hola! Soy <span class="name-highlight">Camila De Giusti</span></h1>
-    <p class="subtitle">Estudiante avanzada de Licenciatura en Ciencias de la Computación</p>
+    <p class="subtitle">Estudiante avanzada de Licenciatura en Ciencias de la Computación | Ayudante de cátedra en la Universidad Nacional del Sur</p>
 </section>
 
 <section id="about" class="about-section">
@@ -36,6 +37,20 @@
         He trabajado en varios proyectos académicos y personales que me han permitido desarrollar mis habilidades técnicas y de trabajo en equipo.
         Algunos de ellos están disponibles en mi portafolio.
     </p>
+</section>
+
+<section id="technologies" class="technologies-section">
+    <h2>Tecnologías</h2>
+    <div class="technologies-grid">
+        <div class="technology-card"><img src="Tecnologías/java.png" alt="Java"><p>Java</p></div>
+        <div class="technology-card"><img src="Tecnologías/c.png" alt="C"><p>C</p></div>
+        <div class="technology-card"><img src="Tecnologías/sql.png" alt="SQL"><p>SQL</p></div>
+        <div class="technology-card"><img src="Tecnologías/html.png" alt="HTML"><p>HTML</p></div>
+        <div class="technology-card"><img src="Tecnologías/css.png" alt="CSS"><p>CSS</p></div>
+        <div class="technology-card"><img src="Tecnologías/javascript.png" alt="JavaScript"><p>JavaScript</p></div>
+        <div class="technology-card"><img src="Tecnologías/php.png" alt="PHP"><p>PHP</p></div>
+        <div class="technology-card"><img src="Tecnologías/git.png" alt="Git"><p>Git</p></div>
+        <div class="technology-card"><img src="Tecnologías/github.png" alt="GitHub"><p>GitHub</p></div>
 </section>
 
 <section id="projects" class="projects-section">
@@ -69,7 +84,6 @@
                 <div class="carrusel">
                     <img src="Fotos proyectos/got/winter-is-coming.png" alt="Winter is Coming">
                 </div>
-
             </div>
         </div>
         <div class="project-card">
@@ -109,7 +123,6 @@
 
 <section id="contact" class="contact-section">
     <h2>Contacto</h2>
-    <p>Puedes contactarme a través de los siguientes medios:</p>
     <ul class="contact-list">
         <li>Email: degiusticamila@gmail.com</li>
         <li>LinkedIn: <a href="https://www.linkedin.com/in/camila-de-giusti/" target="_blank">Camila De Giusti</a></li>
