estilos para apartado de tecnologías

--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
 
 <section id="technologies" class="technologies-section">
     <h2>Tecnologías</h2>
-    <div class="technologies-grid">
-        <div class="technology-card"><img src="Tecnologías/java.png" alt="Java"><p>Java</p></div>
-        <div class="technology-card"><img src="Tecnologías/c.png" alt="C"><p>C</p></div>
-        <div class="technology-card"><img src="Tecnologías/sql.png" alt="SQL"><p>SQL</p></div>
-        <div class="technology-card"><img src="Tecnologías/html.png" alt="HTML"><p>HTML</p></div>
-        <div class="technology-card"><img src="Tecnologías/css.png" alt="CSS"><p>CSS</p></div>
-        <div class="technology-card"><img src="Tecnologías/javascript.png" alt="JavaScript"><p>JavaScript</p></div>
-        <div class="technology-card"><img src="Tecnologías/php.png" alt="PHP"><p>PHP</p></div>
-        <div class="technology-card"><img src="Tecnologías/git.png" alt="Git"><p>Git</p></div>
-        <div class="technology-card"><img src="Tecnologías/github.png" alt="GitHub"><p>GitHub</p></div>
+    <div class="tech-grid">
+        <div class="tech-card"><img src="Tecnologías/java.png" alt="Java"><p>Java</p></div>
+        <div class="tech-card"><img src="Tecnologías/c.png" alt="C"><p>C</p></div>
+        <div class="tech-card"><img src="Tecnologías/sql.png" alt="SQL"><p>SQL</p></div>
+        <div class="tech-card"><img src="Tecnologías/html.png" alt="HTML"><p>HTML</p></div>
+        <div class="tech-card"><img src="Tecnologías/css.png" alt="CSS"><p>CSS</p></div>
+        <div class="tech-card"><img src="Tecnologías/javascript.png" alt="JavaScript"><p>JavaScript</p></div>
+        <div class="tech-card"><img src="Tecnologías/php.png" alt="PHP"><p>PHP</p></div>
+        <div class="tech-card"><img src="Tecnologías/git.png" alt="Git"><p>Git</p></div>
+        <div class="tech-card"><img src="Tecnologías/github.png" alt="GitHub"><p>GitHub</p></div>
 </section>
 
 <section id="projects" class="projects-section">
