--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header class="header">
     <nav class="nav">
-        <div class="logo"><img src="Fotos perfil/camila-de-giusti.png" alt="Camila De Giusti"></div>
+        <div class="logo"><img src="Fotos/perfil-foto.jpg" alt="Camila De Giusti"></div>
         <ul class="nav-links">
             <li><a href="#home">Inicio</a></li>
             <li><a href="#about">Acerca de mí</a></li>
