--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <ul class="contact-list">
         <li>Email: degiusticamila@gmail.com</li>
         <li>LinkedIn: <a href="https://www.linkedin.com/in/camila-de-giusti/" target="_blank">Camila De Giusti</a></li>
-        <li>GitHub: <a href="https://github.com/degiusticamila" target="_blank">camila-de-giusti</a></li>
+        <li><img src="Tecnologías/github.png" alt="GitHub" width="20" height="20"> GitHub: <a href="https://github.com/degiusticamila" target="_blank">camila-de-giusti</a></li>
     </ul>
 </section>
 
