--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         Me apasiona aprender y enfrentar nuevos desafíos en el campo de la computación.
     </p>
     <p>
-        He trabajado en varios proyectos académicos y personales que me han permitido desarrollar mis habilidades técnicas y de trabajo en equipo.
-        Algunos de ellos están disponibles en mi portafolio.
+        Actualmente me desempeño como Pasante en el Área de Convenios de la Universidad Nacional del Sur. Dicho trabajo involucra el mantenimiento del sistema de convenios tanto de frontend como de backend.
     </p>
 </section>
 
@@ -51,6 +50,7 @@
         <div class="tech-card"><img src="Tecnologías/php.png" alt="PHP"><p>PHP</p></div>
         <div class="tech-card"><img src="Tecnologías/git.png" alt="Git"><p>Git</p></div>
         <div class="tech-card"><img src="Tecnologías/github.png" alt="GitHub"><p>GitHub</p></div>
+    </div>
 </section>
 
 <section id="projects" class="projects-section">
