--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mi Portafolio</title>
+    <img rel="icon" href="Fotos/CDG/1.png" type="image/png">
+    <title>Camila De Giusti | Portafolio</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -34,7 +35,10 @@
         Me apasiona aprender y enfrentar nuevos desafíos en el campo de la computación.
     </p>
     <p>
-        Actualmente me desempeño como Pasante en el Área de Convenios de la Universidad Nacional del Sur. Dicho trabajo involucra el mantenimiento del sistema de convenios tanto de frontend como de backend.
+
+    </p>
+    <p>
+        Actualmente me desempeño como Pasante en el Área de Convenios de la Universidad Nacional del Sur. Dicho trabajo involucra el mantenimiento del Sistema de Convenios que involucra tanto frontend como de backend.
     </p>
 </section>
 
