--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <img rel="icon" href="Fotos/CDG/1.png" type="image/png">
+   <link rel="icon" type="image/png" href="Fotos/CDG/1.png">
     <title>Camila De Giusti | Portafolio</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
