--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div class="tech-card"><img src="Tecnologías/php.png" alt="PHP"><p>PHP</p></div>
         <div class="tech-card"><img src="Tecnologías/git.png" alt="Git"><p>Git</p></div>
         <div class="tech-card"><img src="Tecnologías/github.png" alt="GitHub"><p>GitHub</p></div>
+        <div class="tech-card"><img src="Tecnologías/linux.png" alt="Linux"><p>Linux</p></div>
     </div>
 </section>
 
@@ -128,9 +129,9 @@
 <section id="contact" class="contact-section">
     <h2>Contacto</h2>
     <ul class="contact-list">
-        <li>Email: degiusticamila@gmail.com</li>
-        <li>LinkedIn: <a href="https://www.linkedin.com/in/camila-de-giusti/" target="_blank">Camila De Giusti</a></li>
-        <li class="logo"><img src="Tecnologías/github.png" alt="GitHub" width="20" height="20"> GitHub: <a href="https://github.com/degiusticamila" target="_blank">camila-de-giusti</a></li>
+        <li class="contact-item"><img src="Tecnologías/email.png" alt="Email"><a href="mailto:degiusticamila@gmail.com">degiusticamila@gmail.com</a></li>
+        <li class="contact-item"><img src="Tecnologías/linkedin.png" alt="LinkedIn"><a href="https://www.linkedin.com/in/camila-de-giusti/" target="_blank">Camila De Giusti</a></li>
+        <li class="contact-item"><img src="Tecnologías/github.png" alt="GitHub"><a href="https://github.com/degiusticamila" target="_blank">camila-de-giusti</a></li>
     </ul>
 </section>
 
