--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 <section id="contact" class="contact-section">
     <h2>Contacto</h2>
     <ul class="contact-list">
-        <li class="contact-item"><img src="Tecnologías/email.png" alt="Email"><a href="mailto:degiusticamila@gmail.com">degiusticamila@gmail.com</a></li>
-        <li class="contact-item"><img src="Tecnologías/linkedin.png" alt="LinkedIn"><a href="https://www.linkedin.com/in/camila-de-giusti/" target="_blank">Camila De Giusti</a></li>
+        <li class="contact-item"><img src="Tecnologías/gmail.png" alt="Email"><a href="mailto:degiusticamila@gmail.com">degiusticamila@gmail.com</a></li>
+        <li class="contact-item"><img src="Tecnologías/linkedIn.png" alt="LinkedIn"><a href="https://www.linkedin.com/in/camila-de-giusti/" target="_blank">Camila De Giusti</a></li>
         <li class="contact-item"><img src="Tecnologías/github.png" alt="GitHub"><a href="https://github.com/degiusticamila" target="_blank">camila-de-giusti</a></li>
     </ul>
 </section>
