--- a/index.html
+++ b/index.html
@@ -30,16 +30,8 @@
 
 <section id="about" class="about-section">
     <h2>Sobre mí</h2>
-    <p>Soy estudiante avanzada de Licenciatura en Ciencias de la Computación.
-        Interesada en desarrollo de software, infraestructura de TI y administración de sistemas.
-        Me apasiona aprender y enfrentar nuevos desafíos en el campo de la computación.
-    </p>
-    <p>
-
-    </p>
-    <p>
-        Actualmente me desempeño como Pasante en el Área de Convenios de la Universidad Nacional del Sur. Dicho trabajo involucra el mantenimiento del Sistema de Convenios que involucra tanto frontend como de backend.
-    </p>
+    <p>Soy estudiante avanzada de Licenciatura en Ciencias de la Computación en la Universidad Nacional del Sur.</p>
+    <p>Actualmente me desempeño como Pasante en el Área de Convenios de la Universidad Nacional del Sur. Dicho trabajo involucra el mantenimiento del Sistema de Convenios que involucra tanto frontend como de backend.</p>
 </section>
 
 <section id="technologies" class="technologies-section">
