--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 <section id="about" class="about-section">
     <h2>Sobre mí</h2>
-    <p>Soy estudiante avanzada de Licenciatura en Ciencias de la Computación en la Universidad Nacional del Sur.</p>
-    <p>Actualmente me desempeño como Pasante en el Área de Convenios de la Universidad Nacional del Sur. Dicho trabajo involucra el mantenimiento del Sistema de Convenios que involucra tanto frontend como de backend.</p>
+    <p>Soy estudiante avanzada de la Licenciatura en Ciencias de la Computación en la Universidad Nacional del Sur, con interés en el desarrollo de software y la administración de sistemas.</p>
+    <p>Actualmente trabajo como Pasante en el Área de Convenios de la Universidad Nacional del Sur, colaborando en el mantenimiento y mejora del Sistema de Convenios, con tareas tanto de frontend como de backend.</p>
 </section>
 
 <section id="technologies" class="technologies-section">
